<resources>
    <string name="app_name">YourWater</string>
    <string name="delivery_text">Доставка</string>
    <string name="information_text">О компании</string>
    <string name="send_text">Связаться с нами</string>
    <string name="related_products">Сопутствующие товары</string>
    <string name="disposable_tableware">Одноразовая посуда</string>
    <string name="pumps_for_water">Помпы для воды</string>
    <string name="water_coolers">Кулеры для воды</string>
    <string name="str_equipment">Оборудование</string>
    <string name="new_containers_and_lids">Новая тара и крышки</string>
    <string name="racks_for_bottles">Стойки для бутылей</string>
    <string name="after_string">До</string>
    <string name="before_time_string">Время C</string>
    <string name="btn_сlose">Удалить</string>
    <string name="confirmLogout">Вы уверены, что хотите выйти из своего аккаунта?</string>
    <string name="distributionAnswer">Получать уведомления о новых предложениях и акциях</string>
    <string-array name="regions">
        <item>Выберете регион</item>
        <item>Санкт-Петербург</item>
        <item>Ленинградская область</item>
    </string-array>
    <string name="payment_on_card">Оплата по карте</string>
    <string name="payment_on_card_logo">Оплата</string>
    <string name="home">Главная</string>
    <string name="catalog">Каталог</string>
    <string name="basket">Корзина</string>
    <string name="profile">Личный кабинет</string>
    <string name="info_product">Информация о товаре</string>
    <string name="complete_order_label">Оформление заказа</string>
    <string name="Search">Искать</string>
    <string name="Exit">Выход</string>
    <string name="time_order">Время заказа</string>
    <string name="to_suburbs">В пригороды</string>
    <string name="fragment_user_data_user_data_sent_for_moderation">Ваши данные изменены.</string>
    <string-array name="order_pay">
        <item>Оплата по карте курьеру</item>
        <item>Оплата наличными</item>
    </string-array>
    <string name="MailingNotification">Получать уведомления о новых предложениях и акциях</string>
    <string name="default_notification_channel_name" translatable="true">hello</string>
    <string name="default_notification_channel_id" translatable="false">hello</string>
    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
    <string name="fcm_message">FCM Message</string>
    <string name="start_fragment_begin">Начать</string>
    <string name="start_fragment_about_app_logo">Доставка питьевой воды в Санкт-Петербурге</string>
    <string name="login_fragment_enter_text">Вход</string>
    <string name="login_fragment_tel_number">Номер мобильного телефона</string>
    <string name="login_fragment_sent_code">Отправить код</string>
    <string name="login_fragment_login_accept">Нажимая кнопку «Отправить код» вы принимаете условия «Пользовательского соглашения»</string>
    <string name="item_order_number_order">Заказ #</string>
    <string name="order_number_text">Заказ №</string>
    <string name="item_order_info_order">Детали заказа:</string>
    <string name="item_order_total_sum">Итого:</string>
    <string name="item_order_description_complete_order">Оформление заявки:</string>
    <string name="item_order_description_complete_order_logo">Оформление заявки завершено</string>
    <string name="item_order_replay_order">Повторить заказ</string>
    <string name="to_home_text">Перейти на главную</string>
    <string name="delete_product_text">Удалить товар из корзины</string>
    <string name="delete_product_quest_text">Удалить данный товар из корзины</string>
    <string name="item_category_product_name_category">Название категории</string>
    <string name="promo_banner_image_error">Не удалось загрузить картинку</string>
    <string name="repeat_last_order">Повторить последний заказ</string>
    <string name="stocks">Акции</string>
    <string name="net_error_text">Ошибка соединения</string>
    <string name="error_pin_code_text">Неверный пин код</string>
    <string name="error_pay_order_text">Ошибка, не удалось оплатить заказ</string>
    <string name="item_card_product_name_product">Название товара</string>
    <string name="item_card_product_description_product">Описание товара</string>
    <string name="item_card_product_cost_product">от - ₽</string>
    <string name="item_add_card_add_bank_card">Добавить карту</string>
    <string name="item_add_card_number_bank_card">Номер банковской карты</string>
    <string name="item_add_card_validity">Срок действия</string>
    <string name="item_add_card_CVV">CVV</string>
    <string name="item_add_card_this_card_use_next">Я хочу использовать эту карту для будущих заказов</string>
    <string name="item_add_address_label">Добавить адрес</string>
    <string name="item_add_address_home">Дом</string>
    <string name="item_add_address_structure">Строение</string>
    <string name="item_add_address_entrance">Подьезд</string>
    <string name="item_add_address_floor">Этаж</string>
    <string name="item_add_address_apartment">Квартира</string>
    <string name="item_add_address_notice">Примечание</string>
    <string name="item_add_address_contact">Дополнительный контакт</string>
    <string name="item_add_address_address_corp">Корпус</string>
    <string name="fragment_user_data_name_user">Имя</string>
    <string name="fragment_user_data_last_name">Фамилия</string>
    <string name="fragment_user_data_phone">Телефон</string>
    <string name="fragment_user_data_email">Электронная почта</string>
    <string name="edit_user_data">Изменить данные</string>
    <string name="fragment_register_register_text">Регистрация</string>
    <string name="fragment_register_finish">Завершить</string>
    <string name="fragment_register_name_lastname">Имя Фамилия</string>
    <string name="fragment_profile_my_orders">Мои заказы</string>
    <string name="fragment_profile_my_data">Мои данные</string>
    <string name="fragment_profile_addresses">Адреса</string>
    <string name="fragment_profile_bank_card">Банковская карта</string>
    <string name="fragment_profile_notifications">Уведомления</string>
    <string name="fragment_profile_balls">У вас </string>
    <string name="fragment_profile_tanks">Бутелей к возврату:</string>
    <string name="fragment_profile_name_client">Имя клиента</string>
    <string name="support_text_edit_name">Используйте символы русского или латинского алфавита</string>
    <string name="support_text_edit_phone">Просьба ввести валидный номер телефона из 11 цифр, начинающийся на +7</string>
    <string name="support_text_edit_email">Просьба ввести валидный адрес содержащий имя почтового адреса, доменное имя раззделенные @. Пример: test@gmail.com</string>
    <string name="fragment_notification_set_sms_notification">Получать SMS-уведомления</string>
    <string name="fragment_notification_set_PUSH_notification">Получать Push-уведомления</string>
    <string name="fragment_notification_set_email_notification">Получать E-mail рассылки</string>
    <string name="fragment_my_order_nothing_order">У вас пока не было заказов</string>
    <string name="fragment_home_promo">Акции</string>
    <string name="fragment_home_promo_info">Информация по акциям</string>
    <string name="fragment_home_replay_last_order">Повторить заказ</string>
    <string name="fragment_favorite_nothing_text">Избранных товаров пока нет.</string>
    <string name="fragment_faq_one_quest">В чем отличие воды?</string>
    <string name="fragment_faq_one_quest_answer_1_1">Обе воды добываются в сердце Карельского перешейка. Около посёлка Стеклянный расположены скважины глубиной 185 метров — там же, прямо на месте добычи, происходит розлив. Вода доставляется в Санкт-Петербург и область, сохранив свежесть, чистоту и пользу.</string>
    <string name="fragment_delivery_suburbs_text_logo">Доставка воды в пригороды  Санкт-Петербурга</string>
    <string name="fragment_delivery_suburbs_pushkin">Славянка, Пушкин, Коммунар, Павловск</string>
    <string name="fragment_delivery_suburbs_pushkin_text">Доставка воды в Павловск, Пушкин, Коммунар и Славянку на дом и в офисы по расписанию:
С Пн по Пт с 9 ч до 21 ч, мин. интервал 3 часа.
В Субботу с 9 ч до 18 ч, мин. интервал 3 часа.
</string>
    <string name="fragment_delivery_suburbs_kolino">Колпино</string>
    <string name="fragment_delivery_suburbs_kolino_text">
        Доставка воды в Колпино на дом и в офисы по расписанию:
С Пн по Пт с 9 до 21, минимальный интервал 3 часа.
В Субботу с 9 до 18, минимальный интервал 3 часа.
    </string>
    <string name="fragment_delivery_suburbs_krondshtat">Кронштадт</string>
    <string name="fragment_delivery_suburbs_krondshtat_text">
Доставка воды 19 литров в Кронштадт на дом и в офисы по расписанию
Пн и Чт. с 12ч до 18ч
    </string>
    <string name="fragment_delivery_suburbs_metalstroy">пос. Металлострой </string>
    <string name="fragment_delivery_suburbs_metalstroy_text">
        Доставка воды в пос. Металлострой на дом и в офисы по расписанию:
С Пн по Пт с 9 до 21, минимальный интервал 3 часа.
В Субботу с 9 до 18, минимальный интервал 3 часа.
    </string>
    <string name="fragment_delivery_suburbs_krasnoe_selo">Красное село и окрестные пункты</string>
    <string name="fragment_delivery_suburbs_krasnoe_selo_text">
        Доставка воды в Красное село и окрестные пункты. Заказать воду на дом и в офисы в Красное село можно по расписанию:
Вт, Ср, Пт с 10ч до 18ч
    </string>
    <string name="fragment_delivery_suburbs_shushari">Шушары</string>
    <string name="fragment_delivery_suburbs_shushari_text">
        Доставка воды 19 литров в Шушары на дом и в офисы по расписанию:
С Пн по Пт с 9 до 21, минимальный интервал 3 часа.
В Субботу с 9 до 18, минимальный интервал 3 часа.
    </string>
    <string name="fragment_delivery_suburbs_petergof">Петергоф, Ломоносов, Стрельна </string>
    <string name="fragment_delivery_suburbs_petergof_text">
        Доставка питьевой воды в Петергоф, Ломоносов, Стрельну на дом и в офис по расписанию:
Стандартная доставка на следующий день, при заказе с Пн по Пт с 10 до 18
    </string>
    <string name="about_company">На современном российском оборудовании мы добываем и разливаем свежую питьевую воду – «Plesca». Наша продукция имеет все необходимые сертификаты и технические документы. «Plesca» подходит для ежедневного потребления, ее полезно пить детям и взрослым.
</string>
    <string name="why_choose_us">Почему нужно выбирать нас?</string>
    <string name="heal">Здоровье: </string>
    <string name="heal_text">«Plesca» содержит полезные микроэлементы, поддерживающие энергию  и бодрость организма. Подходит для повседневного употребления в любом виде</string>
    <string name="quality">Качество: </string>
    <string name="quality_text">добыча и розлив воды (производство питьевой воды) происходит  с помощью новейшего российского оборудования. Вся продукция имеет сертификаты качества и соответствия</string>
    <string name="taste">Вкус: </string>
    <string name="taste_text">прохладу и свежесть воды обеспечивают методы добычи и многоступенчатая очистка</string>
    <string name="confidence">Доверие: </string>
    <string name="confidence_text">в Санкт-Петербурге воду «Plesca» выбрали РЖД, АТС Смольного, СПБГУ, магазин «Купишуз», ОборонЭнерго СПб, МУП Гатчина, Дом Ветеранов СПб и другие жители Санкт-Петербурга и области</string>
    <string name="benefit">Польза: </string>
    <string name="benefit_text">благодаря бережной очистке воды в ней сохраняется оптимальный уровень солей и микроэлементов</string>
    <string name="description_image_logo">Изображение логотипа</string>
</resources>