<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_about_company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/about_company"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ic_logo" />

        <ImageView
            android:id="@+id/ic_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_your_water_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_why_choose_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/why_choose_us"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_about_company" />

        <ImageView
            android:id="@+id/ic_heal"
            android:layout_width="36dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_heal"
            app:layout_constraintBottom_toBottomOf="@+id/tv_heal_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_logo_heal" />

        <TextView
            android:id="@+id/tv_logo_heal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/heal"
            android:textColor="@color/green"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/ic_heal"
            app:layout_constraintTop_toBottomOf="@+id/tv_why_choose_us" />

        <TextView
            android:id="@+id/tv_heal_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/heal_text"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_logo_heal"
            app:layout_constraintTop_toBottomOf="@+id/tv_logo_heal" />

        <ImageView
            android:id="@+id/ic_quality"
            android:layout_width="36dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_quality_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ic_heal"
            app:srcCompat="@drawable/ic_quality" />

        <TextView
            android:id="@+id/tv_quality_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/quality"
            android:textColor="@color/green"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/ic_quality"
            app:layout_constraintTop_toBottomOf="@+id/tv_heal_text" />

        <TextView
            android:id="@+id/tv_quality_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/quality_text"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_quality_logo"
            app:layout_constraintTop_toBottomOf="@+id/tv_quality_logo" />

        <ImageView
            android:id="@+id/ic_tasty"
            android:layout_width="36dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_taste_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ic_quality"
            app:srcCompat="@drawable/ic_tasty" />

        <TextView
            android:id="@+id/tv_taste_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/taste"
            android:textColor="@color/green"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/ic_tasty"
            app:layout_constraintTop_toBottomOf="@+id/tv_quality_text" />

        <TextView
            android:id="@+id/tv_taste_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/taste_text"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_taste_logo"
            app:layout_constraintTop_toBottomOf="@+id/tv_taste_logo" />

        <ImageView
            android:id="@+id/ic_confidence"
            android:layout_width="36dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_confidence_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ic_tasty"
            app:srcCompat="@drawable/ic_confidence" />

        <TextView
            android:id="@+id/tv_confidence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/confidence"
            android:textColor="@color/green"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/ic_confidence"
            app:layout_constraintTop_toBottomOf="@+id/tv_taste_text" />

        <TextView
            android:id="@+id/tv_confidence_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/confidence_text"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_confidence"
            app:layout_constraintTop_toBottomOf="@+id/tv_confidence" />

        <ImageView
            android:id="@+id/ic_benefit"
            android:layout_width="36dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ic_confidence"
            app:srcCompat="@drawable/ic_benefit" />

        <TextView
            android:id="@+id/tv_benefit_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/benefit"
            android:textColor="@color/green"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/ic_benefit"
            app:layout_constraintTop_toBottomOf="@+id/tv_confidence_text" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/benefit_text"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_benefit_logo"
            app:layout_constraintTop_toBottomOf="@+id/tv_benefit_logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>